Update download option description for clarity

--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
 				<div class="download-menu" id="downloadMenu">
 					<div class="download-option" onclick="downloadVersion('aurora-no-defender')">
 						<div class="option-title" data-en='BerryOS 11 "Aurora"' data-ru='BerryOS 11 "Aurora"'>BerryOS 11 "Aurora"</div>
-						<div class="option-desc" data-en="The definitive build for power users. All Microsoft security features and telemetry are permanently disabled for peak performance and true user sovereignty." data-ru="Основная сборка для продвинутых пользователей. Все встроенные механизмы безопасности и телеметрия Microsoft перманентно отключены для максимальной производительности и полного контроля.">The definitive build for power users. All Microsoft security features and telemetry are permanently disabled for peak performance and true user sovereignty.</div>
+						<div class="option-desc" data-en="The definitive build. All Microsoft security features and telemetry are permanently disabled for peak performance and true user sovereignty." data-ru="Основная сборка. Все встроенные механизмы безопасности и телеметрия Microsoft перманентно отключены для максимальной производительности и полного контроля.">The definitive build. All Microsoft security features and telemetry are permanently disabled for peak performance and true user sovereignty.</div>
 						<!-- <div class="option-warning" data-en="⚡ For users who manage their own security and reject system interference." data-ru="⚡ Для тех, кто сам выбирает свой стек безопасности и не терпит системного вмешательства.">⚡ For users who manage their own security and reject system interference.</div> -->
 					</div>
 					<div class="download-option option-placeholder">
