Add download link for aurora-no-defender version

--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
 
     function downloadVersion(version) {
         const downloadLinks = {
-            'aurora-no-defender': ''
+            'aurora-no-defender': 'https://transfer.it/t/6HDVRU9TVT5Z'
         };
         if (downloadLinks[version]) {
             window.location.href = downloadLinks[version];
